# ollisten

./: CLAUDE.md  agent-edit.html  agent.html  debug.html  index.html  package.json  pnpm-lock.yaml  run-dev.sh  vite.config.ts
plans/: ANALYSIS.md  README.md  ROADMAP.md
src/: AgentList.tsx  AgentSelect.tsx  App.css  App.tsx  AppAgent.css  AppAgent.tsx  AppAgentEdit.tsx  AppBar.tsx  AppDebug.tsx  AppWrapper.tsx  ColorSchemeListener.tsx  DebugButton.tsx  ErrorNotifier.tsx  InputDeviceSelect.tsx  InstallDriverButton.tsx  InstallDriverNotice.tsx  InstallOllamaButton.tsx  InstallStartOllamaNotice.tsx  Launcher.tsx  LlmMessage.tsx  LlmModelSelect.tsx  Menu.tsx  ModeList.tsx  MuiWrapper.tsx  Note.tsx  OutputDeviceSelect.tsx  PrompterButton.tsx  RetryDriverButton.tsx  RetryOllamaButton.tsx  Select.tsx  SplashScreen.tsx  StartButton.tsx  StatusView.tsx  TranscriptionButton.tsx  TranscriptionModelSelect.tsx  TranscriptionView.tsx  agentEditWindow.ts  common.css  common.ts  main-agent-edit.tsx  (+5 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: download-ggml-model.sh
src-tauri/resources/: LocalEcho.pkg  Ollisten.pkg
src-tauri/src/: audio.rs  config.rs  lib.rs  llm.rs  main.rs  session_event.rs  transcription.rs  util.rs  windows.rs
src-tauri/src/audio/: devices.rs  driver.rs  macos_core_audio.rs  mod.rs  shared.rs
src-tauri/src/config/: agents.rs  app_config.rs  get_config.rs  manage_config.rs  watch_config.rs  watcher.rs
src-tauri/src/llm/: get_models.rs  llama_cpp.rs  llm.rs  ollama.rs  open_ai.rs  router.rs  talk.rs  types.rs
src-tauri/src/system/: configuration.rs
src-tauri/src/transcription/: control.rs  cpal_macos_hack.rs  event.rs  model.rs  model_old.rs  voice_audio_detector_ext_v2.rs
src-tauri/src/util/: error_handler.rs  paths.rs
src-tauri/src/whisper/: mod.rs  stream_cli.rs  whisper_buf_reader.rs
src-tauri/src/windows/: agent_window.rs
src/icon/: EngineIcon.tsx  EngineOffIcon.tsx  EngineOffOutlineIcon.tsx  EngineOutlineIcon.tsx  PinIcon.tsx  PinOffIcon.tsx
src/system/: agentManager.ts  agentWorker.ts  events.ts  llm.ts  prompter.ts  subscriptionManager.ts  transcription.ts
src/util/: MuiSnackbarProvider.tsx  debounce.ts  idUtil.ts  unitConversion.ts  useAlerts.tsx  useAppConfig.ts  useForceRender.ts  useIsDark.tsx  useWindowSize.tsx  windowUtil.ts
