[package]
name = "ollisten"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ollisten_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-log = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
log = "0.4.26"
ollama-rs = { version = "0.3.0", git = "https://github.com/ollisten/ollama-rs.git", branch = "matus/dynamic-schema" }
once_cell = "1.21.1"
tokio = { version = "1.44.2", features = ['full'] }
core-foundation = "0.10.0"
coreaudio-sys = "0.2.16"
lazy_static = "1.5.0"
dirs = "6.0.0"
kalosm = { version = "0.4.0", features = ["sound", "metal"] }
futures-core = "0.3.30"
rodio = "0.20.1"
notify = "8.0.0"
which = "7.0.2"
schemars = "0.8.22"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
