[package]
name = "ollisten"
version = "0.1.0"
description = "AI Meeting Assistant"
authors = ["Matus Faro"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = ['default', 'macos-private-api', 'tray-icon', 'image-ico', 'unstable'] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-log = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.33"
log = "0.4.26"
ollama-rs = { version = "0.3.0", git = "https://github.com/ollisten/ollama-rs.git", branch = "matus/dynamic-schema" }
once_cell = "1.21.1"
tokio = { version = "1.44.2", features = ['full'] }
core-foundation = "0.10.0"
lazy_static = "1.5.0"
dirs = "6.0.0"
kalosm = { version = "0.4.0", features = ["sound", "metal"] }
futures-core = "0.3.30"
rodio = "0.20.1"
notify = "8.0.0"
which = "7.0.2"
schemars = "0.8.22"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.16"
cocoa = "0.26"
